--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="dark">
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Marc Wanjeru (Kiritu John Mark) — IT Systems & Cybersecurity Specialist in Kampala, Uganda. Expert in Microsoft 365, Kaspersky, Sophos, network infrastructure, endpoint security, and IT support.">
+  <meta name="keywords" content="IT specialist Kampala, cybersecurity Uganda, Microsoft 365 admin, Kaspersky endpoint, Sophos security, network design Uganda, IT support Kampala">
+  <meta name="author" content="Marc Wanjeru">
+  <meta name="robots" content="index, follow">
+  <meta property="og:title" content="Marc Wanjeru — IT & Cybersecurity Specialist">
+  <meta property="og:description" content="Experienced IT professional specializing in systems administration, network security, and endpoint protection in Kampala, Uganda.">
+  <meta property="og:image" content="https://your-domain.com/profile-image.jpg"> <!-- Replace with your image URL -->
+  <meta property="og:url" content="https://your-domain.com">
+  <meta property="og:type" content="website">
   <title>Marc Wanjeru — IT Systems & Cybersecurity Specialist | Kampala</title>
-  <meta name="description" content="Marc Wanjeru — IT Systems & Cybersecurity Specialist in Kampala, Uganda. Expert in Microsoft 365, Kaspersky, Sophos, network infrastructure & endpoint security."/>
 
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🛡️</text></svg>">
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🛡️</text></svg>">
+  <link rel="canonical" href="https://your-domain.com">
 
   <style>
     :root {
@@ -17,14 +26,14 @@
       --text: #e2e8f0;
       --muted: #94a3b8;
       --accent: #00d4c0;
+      --accent-dark: #00a894;
       --accent-glow: rgba(0,212,192,0.18);
       --shadow: 0 12px 40px rgba(0,0,0,0.6);
       --radius: 16px;
-      --footer-bg: #0a0f14;
-      --footer-text: #c2d4e0;
     }
 
     * { margin:0; padding:0; box-sizing:border-box; }
+    html { scroll-behavior: smooth; }
     body {
       font-family: system-ui, sans-serif;
       background: var(--bg);
@@ -32,15 +41,31 @@
       line-height: 1.6;
       min-height: 100vh;
       overflow-x: hidden;
+      position: relative;
+    }
+
+    /* Subtle watercolor overlay for artistic touch */
+    body::before {
+      content: '';
+      position: absolute;
+      inset: 0;
+      background: radial-gradient(circle at 30% 70%, rgba(0,212,192,0.04) 0%, transparent 40%),
+                  radial-gradient(circle at 70% 30%, rgba(0,180,162,0.03) 0%, transparent 50%);
+      opacity: 0.35;
+      mix-blend-mode: overlay;
+      z-index: -1;
+      pointer-events: none;
     }
 
     /* Navbar */
     .nav-container {
       position: fixed;
-      top: 16px; left: 50%;
+      top: 16px;
+      left: 50%;
       transform: translateX(-50%);
       z-index: 1000;
-      width: 94%; max-width: 1240px;
+      width: 94%;
+      max-width: 1240px;
       transition: all 0.4s ease;
     }
     .nav-container.scrolled { top: 8px; width: 90%; max-width: 1180px; }
@@ -77,6 +102,7 @@
     .nav-links a:hover {
       background: var(--accent-glow);
       color: var(--accent);
+      transform: scale(1.05);
     }
 
     .nav-cta {
@@ -86,20 +112,27 @@
       padding: 10px 28px;
       border-radius: 999px;
       text-decoration: none;
+      transition: all 0.3s;
     }
 
-    .nav-cta:hover { background: #00a894; }
+    .nav-cta:hover { background: var(--accent-dark); transform: translateY(-1px); scale(1.05); }
 
     /* Hero */
     #home {
       height: 100vh;
       min-height: 720px;
       background: linear-gradient(rgba(10,20,26,0.82), rgba(10,20,26,0.88)),
-                  url('https://images.unsplash.com/photo-1558494949-ef0d7b9d4d29?w=2400&auto=format&fit=crop&q=90') center/cover fixed;
+                  url('https://images.unsplash.com/photo-1558494949-ef0d7b9d4d29?w=2400&auto=format&fit=crop&q=90') center/cover no-repeat fixed;
       display: flex;
       align-items: center;
       justify-content: center;
       text-align: center;
+      animation: fadeIn 1.5s ease-out;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(30px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
     .hero-box {
@@ -109,7 +142,13 @@
       backdrop-filter: blur(16px);
       border-radius: 28px;
       border: 1px solid rgba(255,255,255,0.07);
-      box-shadow: 0 24px 64px rgba(0,0,0,0.6);
+      box-shadow: var(--shadow);
+      animation: scaleIn 1.2s ease-out;
+    }
+
+    @keyframes scaleIn {
+      from { opacity: 0; transform: scale(0.95); }
+      to { opacity: 1; transform: scale(1); }
     }
 
     .hero-box h1:first-child { font-size: 3.8rem; margin-bottom: 0.4rem; font-weight: 800; }
@@ -131,15 +170,19 @@
       border-radius: 999px;
       text-decoration: none;
       transition: all 0.3s ease;
+      transform: scale(1);
     }
 
+    .btn:hover { transform: scale(1.05); }
+
     .btn-primary { background: var(--accent); color: #000; }
-    .btn-primary:hover { background: #00a894; transform: translateY(-3px); box-shadow: 0 12px 32px rgba(0,201,177,0.35); }
+    .btn-primary:hover { background: var(--accent-dark); }
     .btn-outline { background: transparent; border: 2px solid white; color: white; }
-    .btn-outline:hover { background: rgba(255,255,255,0.12); transform: translateY(-3px); }
+    .btn-outline:hover { background: rgba(255,255,255,0.12); }
 
     /* Sections */
-    section { padding: 140px 5% 100px; max-width: 1400px; margin: 0 auto; }
+    section { padding: 140px 5% 100px; max-width: 1400px; margin: 0 auto; animation: fadeIn 1.2s ease-out; }
+
     h2 { font-size: 3.2rem; text-align: center; color: var(--accent); margin-bottom: 3.5rem; font-weight: 700; }
 
     .card-grid {
@@ -166,7 +209,7 @@
       transition: transform 0.4s;
     }
 
-    .card:hover { transform: translateY(-12px); }
+    .card:hover { transform: scale(1.03) translateY(-8px); }
 
     /* About */
     #about .about-container {
@@ -192,9 +235,12 @@
       box-shadow: 0 0 40px rgba(0,212,192,0.25),
                   inset 0 0 30px rgba(0,212,192,0.15);
       background: radial-gradient(circle at 30% 30%, rgba(0,212,192,0.12), transparent 60%);
+      transition: transform 0.4s;
     }
 
-    #about img {
+    #about .about-image-circle:hover { transform: scale(1.04); }
+
+    #about .about-image {
       width: 100%;
       height: 100%;
       object-fit: cover;
@@ -215,8 +261,8 @@
     }
 
     @keyframes floatTech {
-      0%   { transform: translate(0, 0) rotate(0deg); }
-      50%  { transform: translate(8px, -12px) rotate(3deg); }
+      0% { transform: translate(0, 0) rotate(0deg); }
+      50% { transform: translate(8px, -12px) rotate(3deg); }
       100% { transform: translate(0, 0) rotate(0deg); }
     }
 
@@ -261,7 +307,10 @@
       color: #000;
       box-shadow: 0 4px 16px rgba(0,212,192,0.35);
       align-self: flex-start;
+      transition: transform 0.3s;
     }
+
+    #contact .contact-toggle:hover { transform: scale(1.1); }
 
     #contact .contact-left h2 {
       font-size: 3.6rem;
@@ -287,7 +336,7 @@
     }
 
     #contact .contact-card:hover {
-      transform: translateY(-4px);
+      transform: translateY(-4px) scale(1.02);
       box-shadow: 0 16px 40px rgba(0,0,0,0.5);
     }
 
@@ -335,7 +384,11 @@
       border: 1px solid var(--border);
       border-radius: var(--radius);
       padding: 40px;
+      box-shadow: var(--shadow);
+      transition: transform 0.4s;
     }
+
+    #contact .contact-form:hover { transform: scale(1.01); }
 
     #contact .contact-form label {
       display: block;
@@ -354,13 +407,13 @@
       border-radius: 12px;
       color: var(--text);
       font-size: 1.05rem;
+      transition: all 0.3s;
     }
 
     #contact .contact-form input:focus,
     #contact .contact-form textarea:focus {
-      outline: none;
       border-color: var(--accent);
-      box-shadow: 0 0 0 3px rgba(0,212,192,0.15);
+      box-shadow: 0 0 0 3px var(--accent-glow);
     }
 
     #contact .contact-form textarea {
@@ -382,52 +435,29 @@
     }
 
     #contact .contact-form button:hover {
-      background: #00a894;
-      transform: translateY(-2px);
+      background: var(--accent-dark);
+      transform: translateY(-2px) scale(1.02);
     }
 
-    /* ── Minimal Footer ── */
+    /* Footer */
     footer {
-      background: var(--footer-bg);
-      color: var(--footer-text);
-      padding: 60px 5% 40px;
+      background: var(--bg);
+      color: var(--muted);
+      padding: 40px 5%;
       text-align: center;
-      border-top: 1px solid rgba(255,255,255,0.06);
-    }
-
-    .footer-content {
-      max-width: 800px;
-      margin: 0 auto;
       font-size: 0.95rem;
+      border-top: 1px solid var(--border);
     }
 
-    .footer-name {
-      font-size: 1.3rem;
-      color: var(--accent);
-      margin-bottom: 0.8rem;
-      font-weight: 600;
-    }
-
-    .footer-links {
-      margin: 1.2rem 0;
-    }
-
-    .footer-links a {
+    footer a {
       color: var(--muted);
       text-decoration: none;
-      margin: 0 1rem;
+      margin: 0 12px;
       transition: color 0.3s;
     }
 
-    .footer-links a:hover {
+    footer a:hover {
       color: var(--accent);
-      text-decoration: underline;
-    }
-
-    .footer-copyright {
-      font-size: 0.9rem;
-      opacity: 0.8;
-      margin-top: 1.5rem;
     }
 
     /* WhatsApp */
@@ -444,7 +474,7 @@
       align-items: center;
       justify-content: center;
       font-size: 2.4rem;
-      box-shadow: 0 12px 36px rgba(0,0,0,0.5);
+      box-shadow: var(--shadow);
       z-index: 999;
       transition: transform 0.3s;
     }
@@ -453,17 +483,14 @@
 
     /* Responsive */
     @media (max-width: 960px) {
-      .about-container,
-      .contact-wrapper {
-        grid-template-columns: 1fr;
-      }
+      .about-container { grid-template-columns: 1fr; text-align: center; }
+      .contact-wrapper { grid-template-columns: 1fr; }
       .contact-left { text-align: center; }
       .contact-toggle { align-self: center; }
     }
 
     @media (max-width: 640px) {
-      footer { padding: 50px 5% 30px; }
-      .footer-links a { display: block; margin: 0.8rem 0; }
+      .card { flex: 0 0 300px; }
     }
   </style>
 </head>
@@ -485,14 +512,14 @@
 </div>
 
 <!-- Hero -->
-<section id="home" style="height:100vh; background:linear-gradient(rgba(10,20,26,0.82),rgba(10,20,26,0.88)), url('https://images.unsplash.com/photo-1558494949-ef0d7b9d4d29?w=2400&auto=format&fit=crop&q=90') center/cover fixed; display:flex; align-items:center; justify-content:center; text-align:center;">
-  <div style="max-width:960px; padding:48px 32px; background:rgba(15,30,45,0.62); backdrop-filter:blur(16px); border-radius:28px; border:1px solid rgba(255,255,255,0.07); box-shadow:0 24px 64px rgba(0,0,0,0.6);">
-    <h1 style="font-size:3.8rem; margin-bottom:0.4rem; font-weight:800;">Hi There!</h1>
-    <h1 style="font-size:5.4rem; line-height:0.95; margin:0.3rem 0 1.5rem; font-weight:900;">I am Marc <span style="color:#00d4c0;">Wanjeru</span></h1>
-    <p style="font-size:1.55rem; opacity:0.92; margin-bottom:2.8rem;">I make complex IT systems simple & secure.</p>
-    <div style="display:flex; gap:1.6rem; justify-content:center; flex-wrap:wrap;">
-      <a href="#contact" style="padding:16px 48px; font-size:1.15rem; font-weight:600; border-radius:999px; background:#00d4c0; color:#000; text-decoration:none;">Contact Me</a>
-      <a href="#" download style="padding:16px 48px; font-size:1.15rem; font-weight:600; border-radius:999px; border:2px solid white; color:white; text-decoration:none;">Download CV</a>
+<section id="home">
+  <div class="hero-box">
+    <h1>Hi There!</h1>
+    <h1>I am Marc <span>Wanjeru</span></h1>
+    <p>I make complex IT systems simple & secure.</p>
+    <div class="hero-buttons">
+      <a href="#contact" class="btn btn-primary">Contact Me</a>
+      <a href="cv-marc-wanjeru.pdf" class="btn btn-outline" download>Download CV</a>
     </div>
   </div>
 </section>
@@ -503,7 +530,7 @@
   <div class="about-container">
     <div class="about-image-wrapper">
       <div class="about-image-circle">
-        <img src="https://images.unsplash.com/photo-1556155099-490a1ba16284?w=800&auto=format&fit=crop&q=80" alt="Marc Wanjeru" class="about-image"/>
+        <img src="https://images.unsplash.com/photo-1556155099-490a1ba16284?w=800&auto=format&fit=crop&q=80" alt="Marc Wanjeru, IT Specialist in Kampala" class="about-image"/>
       </div>
       <div class="tech-overlay"></div>
     </div>
@@ -511,6 +538,93 @@
       <p><strong>IT Systems & Cybersecurity Specialist</strong> with hands-on experience in enterprise IT support, network infrastructure, Microsoft 365 administration, endpoint protection (Kaspersky, Sophos), vulnerability assessments and secure LAN/WLAN design.</p>
       <p>Based in <strong>Kampala, Uganda</strong> — passionate about helping businesses and organizations build reliable, secure and future-ready technology environments.</p>
       <p>Currently focused on advanced infrastructure projects, security hardening, cloud integration and proactive threat mitigation for clients across various sectors.</p>
+    </div>
+  </div>
+</section>
+
+<!-- Journey -->
+<section id="journey">
+  <h2>Professional Journey</h2>
+  <div class="card-grid">
+    <div class="card">
+      <h3>Double Q (C4 Logistics Ltd)</h3>
+      <p>System Administrator (September 2024 – November 2024)</p>
+      <ul>
+        <li>Administered IT infrastructure including switches, PABX, Microsoft Power Apps, wireless access points, and camera surveillance.</li>
+        <li>Implemented Kaspersky Endpoint Protection and centralized management.</li>
+        <li>Managed user accounts, permissions, and Microsoft 365 administration.</li>
+        <li>Conducted security audits and vulnerability assessments.</li>
+      </ul>
+    </div>
+    <div class="card">
+      <h3>Oxfam International Uganda</h3>
+      <p>IT Support Specialist (May 2022 – August 2024)</p>
+      <ul>
+        <li>Provided IT support for 200+ users, including hardware/software troubleshooting and network configs.</li>
+        <li>Managed Microsoft 365, user permissions, and collaboration tools.</li>
+        <li>Implemented endpoint security solutions and system migrations.</li>
+        <li>Ensured system uptime for critical operations.</li>
+      </ul>
+    </div>
+    <div class="card">
+      <h3>Kyagalanyi Coffee Ltd</h3>
+      <p>IT Support Technician (January 2020 – April 2022)</p>
+      <ul>
+        <li>Handled IT support and maintenance for factory operations.</li>
+        <li>Upgraded network cabling and ports for improved connectivity.</li>
+        <li>Installed additional network ports for office expansion.</li>
+        <li>Conducted structured cabling and testing for high-speed networks.</li>
+      </ul>
+    </div>
+  </div>
+</section>
+
+<!-- Services -->
+<section id="services">
+  <h2>Services I Offer</h2>
+  <div class="card-grid">
+    <div class="card">
+      <h3>IT Consultation</h3>
+      <p>Expert advice on system architecture, cloud migration, tech strategy, and infrastructure planning.</p>
+    </div>
+    <div class="card">
+      <h3>Network Setup & Security</h3>
+      <p>Design and secure wired/wireless networks, firewalls, VPNs, and endpoint protection.</p>
+    </div>
+    <div class="card">
+      <h3>Microsoft 365 & Cloud</h3>
+      <p>Setup, administration, migration, and optimization of Microsoft 365, Azure, and cloud services.</p>
+    </div>
+    <div class="card">
+      <h3>Cybersecurity</h3>
+      <p>Vulnerability assessments, antivirus deployment (Kaspersky, Sophos), audits, and incident response.</p>
+    </div>
+    <div class="card">
+      <h3>Hardware & Software Repairs</h3>
+      <p>Diagnosis, repair, and maintenance of devices, software, and enterprise systems — remote or on-site.</p>
+    </div>
+    <div class="card">
+      <h3>Power Apps Development</h3>
+      <p>Custom app development for business processes, automation, and workflow optimization.</p>
+    </div>
+  </div>
+</section>
+
+<!-- Projects -->
+<section id="projects">
+  <h2>Projects</h2>
+  <div class="card-grid">
+    <div class="card">
+      <h3>Network Cabling Upgrade – Kyagalanyi Coffee Factory</h3>
+      <p>Laid fresh Cat6 network cabling, replaced RJ45 ports, installed additional ports for office expansion, and ensured high-speed LAN performance.</p>
+    </div>
+    <div class="card">
+      <h3>Microsoft 365 Migration – Oxfam Uganda</h3>
+      <p>Migrated users to Microsoft 365, managed permissions, and implemented collaboration tools for improved productivity.</p>
+    </div>
+    <div class="card">
+      <h3>Endpoint Security Deployment – Double Q</h3>
+      <p>Implemented Kaspersky Endpoint Protection and centralized management for enhanced security.</p>
     </div>
   </div>
 </section>
@@ -568,13 +682,13 @@
   </div>
 </section>
 
-<!-- Minimal Footer -->
+<!-- Footer -->
 <footer>
   <div class="footer-content">
     <div class="footer-name">Marc Wanjeru</div>
     <div class="footer-links">
-      <a href="https://linkedin.com/in/marc-wanjeru" target="_blank">LinkedIn</a>
-      <a href="https://github.com/marc-wanjeru" target="_blank">GitHub</a>
+      <a href="https://linkedin.com/in/marc-wanjeru" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+      <a href="https://github.com/marc-wanjeru" target="_blank" rel="noopener noreferrer">GitHub</a>
     </div>
     <div class="footer-copyright">
       © 2026 • Kampala, Uganda
@@ -583,7 +697,7 @@
 </footer>
 
 <!-- WhatsApp -->
-<a href="https://wa.me/256769593704?text=Hi%20Marc%2C%20I%20would%20like%20to%20discuss..." class="whatsapp" target="_blank">💬</a>
+<a href="https://wa.me/256707844877?text=Hi%20Marc%2C%20I%20would%20like%20to%20discuss..." class="whatsapp" target="_blank" rel="noopener noreferrer">💬</a>
 
 <script>
 // Navbar scroll effect
